Add registration link

--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -33,7 +33,9 @@
 
 <p>Lamont Forum Room<br>
 Dec. 19, 2016<br>
-11-3pm   </p>
+11-3pm<br>   
+Registration not required but encouraged:<br>
+  <a href="https://goo.gl/forms/Z8klKMkUeQ700dlw1">Register Here</a></p>
 
 <p>Contact <a href="https://github.com/dbouquin" class="user-mention">@dbouquin</a> for details: <a href="mailto:daina.bouquin@cfa.harvard.edu">daina.bouquin@cfa.harvard.edu</a></p>
       </section>
