--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>CryptoParty 2016</h1>
+        <h1>❄ Holiday CryptoParty 2016 ❄</h1>
         <h2>Privacy, surveillance, and the scholarly enterprise</h2>
 
         <section id="downloads">
