--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>❄ Holiday CryptoParty 2016 ❄</h1>
+        <h1>Holiday CryptoParty 2016</h1>
         <h2>Privacy, surveillance, and the scholarly enterprise</h2>
 
         <section id="downloads">
@@ -29,7 +29,7 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="a-holiday-cryptoparty-at-harvard" class="anchor" href="#a-holiday-cryptoparty-at-harvard" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A Holiday CryptoParty at Harvard</h3>
+<a id="a-holiday-cryptoparty-at-harvard" class="anchor" href="#a-holiday-cryptoparty-at-harvard" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>❄ A Holiday CryptoParty at Harvard ❄</h3>
 
 <p>Lamont Forum Room<br>
 Dec. 19, 2016<br>
