Insert collab list

--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -34,6 +34,14 @@
 <p>Lamont Forum Room<br>
 Dec. 19, 2016<br>
   11-3pm<br></p>
+
+<p> Learn from:<br>
+Harvard Library (Wolbach, Law, Cabot, Widener)<br>
+Berkman Klein<br>
+The Harvard CyberLaw Clinic<br>
+ABCD-W3<br>
+HUIT - Security<br>
+The ACLU<br></p>
         
 <p>Registration not required but encouraged:<br>
   <a href="https://goo.gl/forms/Z8klKMkUeQ700dlw1">Register Here</a></p>
