add cryptoparty link

--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -50,6 +50,7 @@ The ACLU<br></p>
       </section>
     </div>
 
+<p><a href="https://www.cryptoparty.in/">What is a CryptoParty?</a></p></p>
     
   </body>
 </html>
