--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -47,10 +47,10 @@ The ACLU<br></p>
   <a href="https://goo.gl/forms/Z8klKMkUeQ700dlw1">Register Here</a></p>
 
 <p>Contact <a href="https://github.com/dbouquin" class="user-mention">@dbouquin</a> for details: <a href="mailto:daina.bouquin@cfa.harvard.edu">daina.bouquin@cfa.harvard.edu</a></p>
+
+<p><a href="https://www.cryptoparty.in/">What is a CryptoParty?</a></p>
       </section>
     </div>
-
-<p><a href="https://www.cryptoparty.in/">What is a CryptoParty?</a></p></p>
     
   </body>
 </html>
