--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -51,7 +51,7 @@ The ACLU<br></p>
 
 <p>Contact <a href="https://github.com/dbouquin" class="user-mention">@dbouquin</a> for details: <a href="mailto:daina.bouquin@cfa.harvard.edu">daina.bouquin@cfa.harvard.edu</a></p>
 
-<p><a href="https://raw.githubusercontent.com/CfA-Library/Outreach/master/OutreachFall2016/cryptoparty2016_flyer.png">See the event flyer here.</a></p>
+<p><a href="https://raw.githubusercontent.com/CfA-Library/Outreach/master/OutreachFall2016/cryptoparty2016_flyer.png">See the event flyer here</a></p>
 
 <p><a href="https://www.cryptoparty.in/">Find out what a CryptoParty is here</a></p>
       </section>
