--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -35,6 +35,12 @@
 Dec. 19, 2016<br>
   11-3pm<br></p>
 
+<p>Goals<br>
+Enable and encourage:<br>
+a higher degree of literacy regarding personal security online<br>
+positive actions to help mitigate privacy issues presented by complex online landscapes<br>
+Before attendees leave, try taking 3 small positive actions</p>
+
 <p> Learn from:<br>
 Harvard Library (Wolbach, Law, Cabot, Widener)<br>
 Berkman Klein<br>
