add bold to registration

--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -49,8 +49,7 @@ The ACLU<br></p>
 <p>This is a drop-in event. Come for the whole event or just when your schedule allows! There will be sets of tables where you can learn from others about different tools and ideas, as well as lightning talks breaking up the afternoon.
 </p>
         
-<p>Registration not required but encouraged:<br>
-  <a href="https://goo.gl/forms/Z8klKMkUeQ700dlw1">Register Here</a></p>
+        <p><b><a href="https://goo.gl/forms/Z8klKMkUeQ700dlw1">Register Here</a></b></p>
 
 <p>Contact <a href="https://github.com/dbouquin" class="user-mention">@dbouquin</a> for details: <a href="mailto:daina.bouquin@cfa.harvard.edu">daina.bouquin@cfa.harvard.edu</a></p>
 
