add lightning talk link

--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -51,6 +51,8 @@ The ACLU<br></p>
         
         <p><b><a href="https://goo.gl/forms/Z8klKMkUeQ700dlw1">Register Here</a></b></p>
 
+        <p><b><a href="https://docs.google.com/spreadsheets/d/1VaZmg1-B2oMWYFvSng68SXMkGRSx9kUCPjQxFM4Pvpo/edit?usp=sharing">Sign up to give a Lightning Talk here</a></b></p>
+
 <p>Contact <a href="https://github.com/dbouquin" class="user-mention">@dbouquin</a> for details: <a href="mailto:daina.bouquin@cfa.harvard.edu">daina.bouquin@cfa.harvard.edu</a></p>
 
 <p><a href="https://raw.githubusercontent.com/CfA-Library/Outreach/master/OutreachFall2016/cryptoparty2016_flyer.png">See the event flyer here</a></p>
