Add link to resources folder

--- a/CryptoParty/index.html
+++ b/CryptoParty/index.html
@@ -35,6 +35,8 @@
 Dec. 19, 2016<br>
   11-3pm<br></p>
 
+<p><b><a href="https://github.com/CfA-Library/Collaborations/tree/master/CryptoParty/CryptoParty_resources">Resources from the event are available here</a></b></p>
+
 <p>Goals:<br>
 Enable and encourage a higher degree of literacy regarding personal security online, and promote positive actions to help mitigate privacy issues presented by complex online landscapes.<br>
 Before attendees leave, try taking 3 small positive actions.</p>
